src/styles.scss
// THIS --> https://material.io/design/color/#tools-for-picking-colors
// https://material.io/resources/color/#!/?view.left=0&view.right=0&primary.color=fa8242

// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@import '@angular/material/theming';
@import url("https://use.typekit.net/jnq3uxd.css");
@import './app/calendar-view/angular-calendar.scss';
// Plus imports for other components in your app.

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
$custom-typography: mat-typography-config($font-family: 'Poppins');

@include mat-core($custom-typography);

$custom-orange: (
  50: #fff3e0,
  100: #ffe0b2,
  200: #ffcc80,
  300: #ffb74d,
  400: #ffa726,
  500: #ff9800,
  600: #fb8c00,
  700: #f57c00,
  800: #ef6c00,
  900: #e65100,
  A100: #ffd180,
  A200: #ffab40,
  A400: #ff9100,
  A700: #ff6d00,
  contrast: (50: $black-87-opacity,
    100: $black-87-opacity,
    200: $black-87-opacity,
    300: $black-87-opacity,
    400: $black-87-opacity,
    500: white,
    600: white,
    700: white,
    800: white,
    900: white,
    A100: $black-87-opacity,
    A200: $black-87-opacity,
    A400: $black-87-opacity,
    A700: white,
  )
);

// Define the palettes for your theme using the Material Design palettes available in palette.scss
// (imported above). For each palette, you can optionally specify a default, lighter, and darker
// hue. Available color palettes: https://material.io/design/color/
$firestarter-primary: mat-palette($custom-orange);
$firestarter-accent: mat-palette($mat-green, A200, A100, A400);

// The warn palette is optional (defaults to red).
$firestarter-warn: mat-palette($mat-red);

// Create the theme object (a Sass map containing all of the palettes).
$firestarter-theme: mat-dark-theme($firestarter-primary, $firestarter-accent, $firestarter-warn);

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
@include angular-material-theme($firestarter-theme);

/* You can add global styles to this file, and also import other style files */



html,
body {
  height: 100%;
}

body {
  margin: 0;
  font-family: 'Poppins', sans-serif;
}

a {
  color: white;
  text-decoration: none;
}

.mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
  padding: 0 9px!important;
  line-height: 42px!important;
}

@media only screen and (max-width: 400px) {
  .mat-dialog-container{
    padding: 20px!important;
  }
}

.mat-dialog-actions {
  margin-bottom: -8px!important;
}

mat-icon:hover {
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 50%;
}

.dark-theme {
  // First define some global color variables for your app, these are just for the demo, they can be anything you like
  $bg-dark-primary: #1f262d;
  $bg-dark-secondary: #394046;
  $bg-active: #2c343a;
  $text-color: #d5d6d7;
  $border-color: rgb(0 0 0 / 60%);

  // Call the calendar mixin with a sass color map of your theme. Every property is optional.
  // For a list of all variables and how they are used,
  // see https://github.com/mattlewis92/angular-calendar/tree/main/projects/angular-calendar/src/variables.scss
  @include cal-theme((bg-primary: $bg-dark-primary,
      bg-secondary: $bg-dark-secondary,
      weekend-color: indianred,
      bg-active: $bg-active,
      border-color: $border-color,
      gray: $bg-dark-secondary,
      today-bg: $bg-dark-secondary,
      event-color-primary: $bg-dark-secondary,
    ));

  // How to override a non themable property, this was copied from chrome -> inspect element -> styles panel
  .cal-month-view .cal-day-cell.cal-out-month .cal-day-number {
    opacity: 0.15;
  }

  // Everything else below is just themes the demo, it's probably not relevant to your app
  background-color: $bg-dark-primary;
  color: $text-color;

  .card {
    border-color: $border-color;
  }

  .card-header {
    background-color: $bg-dark-secondary;
  }

  .card-body {
    background-color: $bg-dark-primary;
  }

  .nav-tabs {
    border-bottom-color: $border-color;
  }

  .nav-tabs .nav-link.active {
    background-color: $bg-dark-primary;
    color: $text-color;
    border-color: $border-color;
  }

  .nav-tabs .nav-link:hover,
  .nav-tabs .nav-link:focus {
    border-color: $border-color;
  }
}

/* width */
::-webkit-scrollbar {
  height: 10px;
  width: 10px;
}

::-webkit-scrollbar-corner{
  background-color: transparent;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #8d8d8d;
  border-radius: 10px;
  border-color: #b3b3b3;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #616161;
}

